2009-01-01  Derek Price  <derek@ximbiot.com>

	* configure.ac: Update version # for post 1.80 development.
	* NEWS: Add section for 1.82 release information.
	* test/encodings/Makefile.am (EXTRA_DIST),
	test/formatting/Makefile.am (EXTRA_DIST): Remove references to
	unversioned files.

	* configure.ac: Update version # for 1.80 release.
	* NEWS: Add date for 1.80 release.

2009-01-01  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.init: remove space in front of @quotation argument.
	* texi2html.pl: add a key in duplicated state.
	Return the remaining line after a kept misc command.
	Go through normal_text for empty lines in preformatted.
	Open paragraph after unkown command.
	Call begin_format_texi after closing stuff.

2008-12-24  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: add new hooks for user functions, for simple 
	@-commands, and at the beginning of special regions.
	* T2h_i18n.pm, texi2html.pl, texi2html.init, examples/*: 
	use main state in translation string only when needed.

2008-12-23  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: correct transliteration when USE_UNICODE or 
	USE_UNIDECODE are not set.
	* test/encoding/*: tests for transliteration with all possibilities.

2008-12-23  Patrice Dumas  <dumas@centre-cired.fr>

	* texi2html.pl: don't use unidecode on unicode characters that
	are known not to have a good transliteration. This corresponds with
	characters with an @-command that don't have a transliteration, like
	@exclamdown...
	* test/*: avoid more spurious differences in latex2html output.

2008-12-22  Derek Price  <derek@ximbiot.com>

	* doc/.cvsignore: Ignore this...
	* doc/texi2html.html: ...removed file, since it is generated during
	build.

2008-12-16  Patrice Dumas  <dumas@centre-cired.fr>

	* test/*: handle more gracefully missing latex2html or tex4ht.
	Try to avoid spurious differences in latex2html output.

2008-12-11  Derek Price  <derek@ximbiot.com>
